@@ -3,6 +3,7 @@ HLStats ChangeLog
 
 1.61 (tba)
 *) New: Russian translation by E][tremist
+*) Opposing Force CTF/DM role models added
 *) Changed: New Bug Tracker. Now FlySpray
 *) Fixed: Ticket #28
 
